# notebooklm-langchain

./: .env.example  README.md  main.py  pyproject.toml
client/: app.js  index.html  styles.css
src/: app.py
src/agents/: chat.py  research.py
src/api/: __init__.py  app.py  schemas.py  serve.py  services.py
src/core/: sources.py  store.py
