[project]
name = "langchain-notebooklm"
version = "0.1.0"
description = "NotebookLM-style grounded research assistant — a staged project for learning LangChain v1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-cohere>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "netfree-unstrict-ssl>=0.1.3",
    "numpy>=2.5.0",
    "langchain-google-genai>=4.2.7",
    "firecrawl-py>=4.32.1",
]

[project.optional-dependencies]
# Added in later stages (e.g. MCP in stage 9)
mcp = ["langchain-mcp-adapters>=0.1.0"]

[project.scripts]
notebooklm = "app:main"
notebooklm-serve = "api.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
